# chess-cheating-tool

./: .firebaserc  .gitignore  Procfile  README.md  firebase.json  pyproject.toml  requirements.txt
docs/: BluePrint.md  DONE.md  TODO.md  chess.js.txt  chessboard.js.txt  chessboard.js.txt.json  lichess-accuracy.md  python-chess-uci.md
pgn/: example_game.pgn  game1.pgn  game2.pgn
src/: analysis_core.py  main.py
src/templates/: index.html
