[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = "Start a simple web app with the Flask framework for Python"
authors = ["Google LLC"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
python-chess = "*"
gunicorn = "^22.0.0"

[tool.poetry.scripts]
app = 'src.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
